# copiloto-ayuntamiento

./: .env.example  .gitignore  CLAUDE.md  package.json  turbo.json  vercel.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/src/: config.py  deps.py  main.py
apps/api/src/agents/: base.py  citizen_faq.py
apps/api/src/api/v1/: appointments.py  chat.py  documents.py  ocr.py  resolutions.py  search.py  webhooks.py
apps/api/src/db/: session.py
apps/api/src/db/migrations/: env.py
apps/api/src/middleware/: audit.py  rgpd.py  tenant.py
apps/api/src/models/: audit_log.py  expediente.py  municipio.py  resolution.py
apps/api/src/services/: chat_session.py  embedding_svc.py
apps/api/src/workers/: celery_app.py
apps/web/: package.json
apps/web/public/: protocolo-fast-track.html
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/backoffice/resoluciones/: page.tsx
apps/web/src/app/citizen/: page.tsx
docs/: protocolo-fast-track.html
infra/docker/: docker-compose.yml
infra/keycloak/: realm-export.json
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
knowledge-base/template/faqs/: preguntas_generales.yaml
knowledge-base/template/procedimientos/: obra_menor.yaml
scripts/: create_municipality.py  seed_knowledge_base.py
