[project]
name = "copiloto-api"
version = "0.1.0"
description = "Copiloto Administrativo — Backend FastAPI"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",       # file uploads

    # IA — Anthropic Claude
    "anthropic>=0.40.0",

    # Base de datos
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",                # PostgreSQL async driver
    "alembic>=1.14.0",
    "pgvector>=0.3.6",                # pgvector Python client

    # Validación / configuración
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Autenticación
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28.0",                  # llamadas HTTP async (Keycloak, etc.)

    # Cola de tareas
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",

    # Storage (MinIO / S3)
    "boto3>=1.35.0",
    "minio>=7.2.0",

    # OCR
    "google-cloud-documentai>=2.32.0",
    "pytesseract>=0.3.13",            # fallback OCR
    "pillow>=11.0.0",

    # Procesamiento documentos
    "python-docx>=1.1.2",             # plantillas Word
    "openpyxl>=3.1.5",                # exportación Excel
    "pypdf>=5.1.0",                   # lectura PDFs
    "jinja2>=3.1.4",                  # system prompts templates

    # SAML / Cl@ve
    "python3-saml>=1.16.0",

    # Monitorización
    "prometheus-fastapi-instrumentator>=7.0.0",
    "structlog>=24.4.0",              # logs estructurados JSON

    # Seguridad
    "cryptography>=43.0.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",                  # TestClient async
    "factory-boy>=3.3.1",
    "faker>=33.0.0",
    "vcrpy>=6.0.0",                   # cassettes para tests de Claude API
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["tests/*", "src/db/migrations/*"]
